
Tue Sep 21 23:17:24 PDT 1999
(Raster)

only allow one "default group settings" configuration dialog at a time

-------------------------------------------------------------------------------

Wed Sep 22 09:33:27 PDT 1999
(Raster)

fix the focus fixup - shoudl let focus change as per before AND fix up
transient focus errors too... i hope.. needs some testing.

added "set focus to logout are you ssure" dialog and make sure it accepts the 
standard retrun/escape keybindings for "yes/no" like the settings dialogs do.

-------------------------------------------------------------------------------

Wed Sep 22 10:44:34 PDT 1999
(Raster)

update TODO

-------------------------------------------------------------------------------

Wed Sep 22 13:37:41 PDT 1999
(Raster)

the remember dialog not coming up bug.. fixed.. :)

*should* have fixed soem multihead issues - have still to test..
(shoudl restart correctly, exit correcttly, restart anotherwm correctly and
restart themes correctly)


-------------------------------------------------------------------------------

Wed Sep 22 13:39:22 PDT 1999
(Raster)

get rid of fprintf debug messags

-------------------------------------------------------------------------------

Wed Sep 22 15:37:25 PDT 1999
(Mandrake)

fixed a bug in kde support that caused E to potentially crash on property
events upon deletion by a window.

-------------------------------------------------------------------------------

Wed Sep 22 15:41:28 PDT 1999
(Raster)

some more multihead fixes...

-------------------------------------------------------------------------------

Wed Sep 22 16:08:01 PDT 1999
(Raster)

make the memory debugging stuff better commented - and add ipc call tyo 
dump mem debug info

-------------------------------------------------------------------------------

Wed Sep 22 16:39:43 PDT 1999
(Mandrake)

moved kde client change property handler a little, but I don't think this is
going to make a difference.